# set-cookie

./: .gitignore  pyproject.toml
account/: admin.py  authenticate.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
config/: pagination.py  settings.py  urls.py
